--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body{
 .hero{
   background:
     linear-gradient(rgba(11,77,184,.88),rgba(0,0,0,.9)),
-    url("hero-mototaxi.jpg") center/cover no-repeat;
+    url("SoloConductorTdd.jpg") center/cover no-repeat;
   padding:90px 20px;
   text-align:center;
 }
@@ -253,7 +253,7 @@ footer{
 </section>
 
 <footer>
-  © 2026 Mi Taxi Bolivia · Nosotros te movemos
+  © 2026 Mi Taxi Bolivia · JEDIS Web Solutions
 </footer>
 
 <script>
@@ -271,3 +271,4 @@ setInterval(()=>{
 
 </body>
 </html>
+
