--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body{
 .hero{
   background:
     linear-gradient(rgba(11,77,184,.88),rgba(0,0,0,.9)),
-    url("SoloConductorTdd.jpg") center/cover no-repeat;
+    url("ClienteConductor.png") center/cover no-repeat;
   padding:90px 20px;
   text-align:center;
 }
@@ -142,7 +142,7 @@ h2{
 .conductor{
   background:
     linear-gradient(rgba(11,77,184,.95),rgba(11,77,184,.95)),
-    url("conductor-real.jpg") center/cover no-repeat;
+    url("ClienteConductor.png") center/cover no-repeat;
 }
 
 /* FOOTER */
@@ -271,4 +271,5 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
