--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <!-- SEO Básico -->
+<title>Mi Taxi App | Pide tu taxi rápido y seguro</title>
+<meta name="description" content="Mi Taxi es la app para pedir taxis de forma rápida, segura y confiable. Disponible para pasajeros y conductores.">
+
+<!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Mi Taxi App | Pide tu taxi rápido y seguro">
+<meta property="og:description" content="Solicita tu taxi en segundos con Mi Taxi. Seguridad, rapidez y conductores verificados.">
+<meta property="og:image" content="Preview.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:url" content="https://TU-DOMINIO.COM">
+<meta property="og:site_name" content="Mi Taxi">
+
+<!-- Twitter / X -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Mi Taxi App | Pide tu taxi rápido y seguro">
+<meta name="twitter:description" content="La app de taxis rápida y segura. Disponible ahora.">
+<meta name="twitter:image" content="Preview.jpg">
+
+<!-- WhatsApp compatibilidad -->
+<meta property="og:image:type" content="image/jpeg">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Mi Taxi | Mototaxi · Taxi · Motocar</title>
@@ -271,5 +294,6 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
