--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:image" content="Preview.jpg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
-<meta property="og:url" content="https://TU-DOMINIO.COM">
+<meta property="og:url" content="https://jwilsoncruz.github.io/MiTaxi/Preview.jpg">
 <meta property="og:site_name" content="Mi Taxi">
 
 <!-- Twitter / X -->
@@ -294,6 +294,7 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
 
