--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <!-- SEO Básico -->
+  <!-- === Meta básico de SEO === -->
 <title>Mi Taxi App | Pide tu taxi rápido y seguro</title>
-<meta name="description" content="Mi Taxi es la app para pedir taxis de forma rápida, segura y confiable. Disponible para pasajeros y conductores.">
+<meta name="description" content="Solicita taxis, mototaxis o motocar con la app Mi Taxi. Rápido, seguro y con conductores verificados.">
 
-<!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+<!-- === Open Graph (Facebook, WhatsApp, LinkedIn y otras) === -->
 <meta property="og:type" content="website">
+<meta property="og:url" content="https://jwilsoncruz.github.io/MiTaxi/">
 <meta property="og:title" content="Mi Taxi App | Pide tu taxi rápido y seguro">
-<meta property="og:description" content="Solicita tu taxi en segundos con Mi Taxi. Seguridad, rapidez y conductores verificados.">
-<meta property="og:image" content="Preview.jpg">
+<meta property="og:description" content="Descarga Mi Taxi y solicita tu viaje en segundos. Seguro, rápido y con conductores cerca de ti.">
+<meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/assets/preview-mi-taxi.jpg">
 <meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-<meta property="og:url" content="https://jwilsoncruz.github.io/MiTaxi/Preview.jpg">
+<meta property{"og:image:height"} content="630">
 <meta property="og:site_name" content="Mi Taxi">
 
-<!-- Twitter / X -->
+<!-- === Twitter / X Cards === -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Mi Taxi App | Pide tu taxi rápido y seguro">
-<meta name="twitter:description" content="La app de taxis rápida y segura. Disponible ahora.">
-<meta name="twitter:image" content="Preview.jpg">
+<meta name="twitter:description" content="Descarga Mi Taxi y solicita tu viaje en segundos. Seguro, rápido y con conductores cerca de ti.">
+<meta name="twitter:image" content="https://jwilsoncruz.github.io/MiTaxi/assets/preview-mi-taxi.jpg">
 
-<!-- WhatsApp compatibilidad -->
+<!-- === Opcional: Para WhatsApp específica (mejor compatibilidad) === -->
 <meta property="og:image:type" content="image/jpeg">
 
 <meta charset="UTF-8">
@@ -294,6 +294,7 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
 
