--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta property="og:url" content="https://jwilsoncruz.github.io/MiTaxi/">
 <meta property="og:title" content="Mi Taxi App | Pide tu taxi rápido y seguro">
 <meta property="og:description" content="Descarga Mi Taxi y solicita tu viaje en segundos. Seguro, rápido y con conductores cerca de ti.">
-<meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/assets/Preview.jpg">
+<meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/Preview.jpg">
 <meta property="og:image:width" content="1200">
 <meta property{"og:image:height"} content="630">
 <meta property="og:site_name" content="Mi Taxi">
@@ -19,7 +19,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Mi Taxi App | Pide tu taxi rápido y seguro">
 <meta name="twitter:description" content="Descarga Mi Taxi y solicita tu viaje en segundos. Seguro, rápido y con conductores cerca de ti.">
-<meta name="twitter:image" content="https://jwilsoncruz.github.io/MiTaxi/assets/Preview.jpg">
+<meta name="twitter:image" content="https://jwilsoncruz.github.io/MiTaxi/Preview.jpg">
 
 <!-- === Opcional: Para WhatsApp específica (mejor compatibilidad) === -->
 <meta property="og:image:type" content="image/jpeg">
@@ -294,6 +294,7 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
 
