--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
 <meta property="og:url" content="https://jwilsoncruz.github.io/MiTaxi/">
 <meta property="og:title" content="Mi Taxi App | Pide tu taxi rápido y seguro">
 <meta property="og:description" content="Descarga Mi Taxi y solicita tu viaje en segundos. Seguro, rápido y con conductores cerca de ti.">
-<meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/Preview.jpg">
-<meta property="og:image:width" content="1200">
-<meta property{"og:image:height"} content="630">
-<meta property="og:site_name" content="Mi Taxi">
+ <meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/Preview.jpg">
+    <meta property="og:type" content="website">
 
-<!-- === Twitter / X Cards === -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Mi Taxi App | Pide tu taxi rápido y seguro">
-<meta name="twitter:description" content="Descarga Mi Taxi y solicita tu viaje en segundos. Seguro, rápido y con conductores cerca de ti.">
-<meta name="twitter:image" content="https://jwilsoncruz.github.io/MiTaxi/Preview.jpg">
+    <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalice.css">
+    <link rel="stylesheet" href="libs/wow/animate.css">
+    <link rel="stylesheet" href="libs/owl/owl.carousel.css">
+    <link rel="stylesheet" href="libs/owl/owl.theme.default.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/icono.png">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
+    <script src="js/jquery.js"></script>
+    <script src="libs/wow/wow.js"></script>
+    <script src="libs/owl/owl.carousel.js"></script>
 
 <!-- === Opcional: Para WhatsApp específica (mejor compatibilidad) === -->
 <meta property="og:image:type" content="image/jpeg">
@@ -294,6 +299,7 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
 
