--- a/index.html
+++ b/index.html
@@ -1,204 +1,206 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <!-- === Meta básico de SEO === -->
-<title>Mi Taxi App | Pide tu taxi rápido y seguro</title>
-<meta name="description" content="Solicita taxis, mototaxis o motocar con la app Mi Taxi. Rápido, seguro y con conductores verificados.">
+  <!-- ================= META BÁSICO ================= -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- === Open Graph (Facebook, WhatsApp, LinkedIn y otras) === -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://jwilsoncruz.github.io/MiTaxi/">
-<meta property="og:title" content="Mi Taxi App | Pide tu taxi rápido y seguro">
-<meta property="og:description" content="Descarga Mi Taxi y solicita tu viaje en segundos. Seguro, rápido y con conductores cerca de ti.">
- <meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/Preview.jpg">
-    <meta property="og:type" content="website">
+  <title>Mi Taxi App | Pide tu taxi rápido y seguro</title>
+  <meta name="description" content="Solicita taxis, mototaxis o motocar con la app Mi Taxi. Rápido, seguro y con conductores verificados.">
 
-    <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalice.css">
-    <link rel="stylesheet" href="libs/wow/animate.css">
-    <link rel="stylesheet" href="libs/owl/owl.carousel.css">
-    <link rel="stylesheet" href="libs/owl/owl.theme.default.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/icono.png">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+  <!-- ================= OPEN GRAPH (FB + WHATSAPP) ================= -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://jwilsoncruz.github.io/MiTaxi/">
+  <meta property="og:title" content="Mi Taxi App | Pide tu taxi rápido y seguro">
+  <meta property="og:description" content="Descarga Mi Taxi y solicita tu viaje en segundos. Seguro, rápido y con conductores cerca de ti.">
 
-    <script src="js/jquery.js"></script>
-    <script src="libs/wow/wow.js"></script>
-    <script src="libs/owl/owl.carousel.js"></script>
+  <meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/preview-wa.jpg">
+  <meta property="og:image:secure_url" content="https://jwilsoncruz.github.io/MiTaxi/preview-wa.jpg">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
 
-<!-- === Opcional: Para WhatsApp específica (mejor compatibilidad) === -->
-<meta property="og:image:type" content="image/jpeg">
+  <!-- ================= FAVICON ================= -->
+  <link rel="icon" href="img/icono.png" type="image/png">
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mi Taxi | Mototaxi · Taxi · Motocar</title>
+  <!-- ================= FUENTES ================= -->
+  <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;600;700&display=swap" rel="stylesheet">
 
-<style>
-:root{
-  --azul:#0B4DB8;
-  --amarillo:#F5C400;
-  --negro:#0A0A0A;
-  --blanco:#ffffff;
-}
+  <!-- ================= ESTILOS ================= -->
+  <style>
+    :root{
+      --azul:#0B4DB8;
+      --amarillo:#F5C400;
+      --negro:#0A0A0A;
+      --blanco:#ffffff;
+    }
 
-*{margin:0;padding:0;box-sizing:border-box;font-family:Arial,Helvetica,sans-serif}
+    *{
+      margin:0;
+      padding:0;
+      box-sizing:border-box;
+      font-family:'Asap', Arial, sans-serif;
+    }
 
-body{
-  background:var(--negro);
-  color:var(--blanco);
-  line-height:1.6;
-}
+    body{
+      background:var(--negro);
+      color:var(--blanco);
+      line-height:1.6;
+    }
 
-/* HERO */
-.hero{
-  background:
-    linear-gradient(rgba(11,77,184,.88),rgba(0,0,0,.9)),
-    url("ClienteConductor.png") center/cover no-repeat;
-  padding:90px 20px;
-  text-align:center;
-}
+    /* HERO */
+    .hero{
+      background:
+        linear-gradient(rgba(11,77,184,.9),rgba(0,0,0,.9)),
+        url("ClienteConductor.png") center/cover no-repeat;
+      padding:90px 20px;
+      text-align:center;
+    }
 
-.hero img{
-  width:140px;
-  margin-bottom:20px;
-}
+    .hero img{
+      width:140px;
+      margin-bottom:20px;
+    }
 
-.hero h1{
-  font-size:40px;
-}
+    .hero h1{
+      font-size:40px;
+      margin-bottom:10px;
+    }
 
-.hero p{
-  max-width:720px;
-  margin:15px auto 30px;
-  font-size:18px;
-}
+    .hero p{
+      max-width:720px;
+      margin:0 auto 30px;
+      font-size:18px;
+    }
 
-/* BOTONES */
-.btn{
-  display:inline-block;
-  padding:15px 30px;
-  border-radius:30px;
-  text-decoration:none;
-  font-weight:bold;
-  margin:8px;
-  transition:.3s;
-}
+    /* BOTONES */
+    .btn{
+      display:inline-block;
+      padding:15px 32px;
+      border-radius:30px;
+      text-decoration:none;
+      font-weight:700;
+      margin:8px;
+      transition:.3s;
+    }
 
-.btn-yellow{
-  background:var(--amarillo);
-  color:#000;
-}
+    .btn-yellow{
+      background:var(--amarillo);
+      color:#000;
+    }
 
-.btn-blue{
-  background:transparent;
-  border:2px solid var(--amarillo);
-  color:var(--amarillo);
-}
+    .btn-blue{
+      border:2px solid var(--amarillo);
+      color:var(--amarillo);
+      background:transparent;
+    }
 
-.btn:hover{transform:scale(1.05)}
+    .btn:hover{
+      transform:scale(1.05);
+    }
 
-/* CONTADOR */
-#contador{
-  display:flex;
-  justify-content:center;
-  gap:14px;
-  margin-bottom:35px;
-  flex-wrap:wrap;
-}
+    /* CONTADOR */
+    #contador{
+      display:flex;
+      justify-content:center;
+      gap:14px;
+      margin-bottom:35px;
+      flex-wrap:wrap;
+    }
 
-.time{
-  background:#0f1f44;
-  border:2px solid var(--amarillo);
-  border-radius:12px;
-  padding:12px 18px;
-  min-width:90px;
-}
+    .time{
+      background:#0f1f44;
+      border:2px solid var(--amarillo);
+      border-radius:12px;
+      padding:12px 18px;
+      min-width:90px;
+    }
 
-.time div{
-  font-size:34px;
-  color:var(--amarillo);
-  font-weight:bold;
-}
+    .time div{
+      font-size:34px;
+      color:var(--amarillo);
+      font-weight:bold;
+    }
 
-.time span{
-  font-size:12px;
-  text-transform:uppercase;
-}
+    .time span{
+      font-size:12px;
+      text-transform:uppercase;
+    }
 
-/* SECCIONES */
-section{padding:80px 20px}
+    /* SECCIONES */
+    section{
+      padding:80px 20px;
+    }
 
-.container{
-  max-width:1100px;
-  margin:auto;
-}
+    .container{
+      max-width:1100px;
+      margin:auto;
+    }
 
-h2{
-  text-align:center;
-  font-size:34px;
-  margin-bottom:15px;
-}
+    h2{
+      text-align:center;
+      font-size:34px;
+      margin-bottom:15px;
+    }
 
-.sub{
-  text-align:center;
-  max-width:750px;
-  margin:0 auto 45px;
-  font-size:17px;
-}
+    .sub{
+      text-align:center;
+      max-width:750px;
+      margin:0 auto 45px;
+      font-size:17px;
+    }
 
-/* CARDS */
-.cards{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-  gap:25px;
-}
+    /* CARDS */
+    .cards{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+      gap:25px;
+    }
 
-.card{
-  background:#111;
-  border-radius:16px;
-  padding:28px;
-  text-align:center;
-  border:1px solid #222;
-}
+    .card{
+      background:#111;
+      border-radius:16px;
+      padding:28px;
+      text-align:center;
+      border:1px solid #222;
+    }
 
-.card h3{
-  color:var(--amarillo);
-  margin-bottom:10px;
-}
+    .card h3{
+      color:var(--amarillo);
+      margin-bottom:10px;
+    }
 
-/* CONDUCTOR */
-.conductor{
-  background:
-    linear-gradient(rgba(11,77,184,.95),rgba(11,77,184,.95)),
-    url("ClienteConductor.png") center/cover no-repeat;
-}
+    /* CONDUCTOR */
+    .conductor{
+      background:
+        linear-gradient(rgba(11,77,184,.95),rgba(11,77,184,.95)),
+        url("ClienteConductor.png") center/cover no-repeat;
+    }
 
-/* FOOTER */
-footer{
-  background:#000;
-  padding:30px;
-  text-align:center;
-  font-size:14px;
-  color:#aaa;
-}
+    footer{
+      background:#000;
+      padding:30px;
+      text-align:center;
+      font-size:14px;
+      color:#aaa;
+    }
 
-@media(max-width:600px){
-  h1{font-size:30px}
-  h2{font-size:26px}
-}
-</style>
+    @media(max-width:600px){
+      .hero h1{font-size:30px}
+      h2{font-size:26px}
+    }
+  </style>
 </head>
 
 <body>
 
-<!-- HERO -->
+<!-- ================= HERO ================= -->
 <div class="hero">
-  <img src="logo.jpg" alt="Mi Taxi">
+  <img src="logo.jpg" alt="Mi Taxi Logo">
+
   <h1>Mototaxi · Taxi · Motocar</h1>
-  <p>
-    La nueva App de transporte en Trinidad.  
-    Pide tu viaje o gana dinero con tu vehículo.
-  </p>
+  <p>La nueva App de transporte en Trinidad.  
+     Pide tu viaje o gana dinero con tu vehículo.</p>
 
   <div id="contador">
     <div class="time"><div id="d">00</div><span>Días</span></div>
@@ -207,75 +209,41 @@ footer{
     <div class="time"><div id="s">00</div><span>Seg</span></div>
   </div>
 
-  <a class="btn btn-yellow"
-     href="https://play.google.com/store/apps/details?id=com.blueapp.usuario"
-     target="_blank">
+  <a class="btn btn-yellow" target="_blank"
+     href="https://play.google.com/store/apps/details?id=com.blueapp.usuario">
      Soy Pasajero – Descargar App
   </a>
 
-  <a class="btn btn-blue"
-     href="https://play.google.com/store/apps/details?id=com.blueapp.conductor"
-     target="_blank">
+  <a class="btn btn-blue" target="_blank"
+     href="https://play.google.com/store/apps/details?id=com.blueapp.conductor">
      Soy Conductor – Ganar Dinero
   </a>
 </div>
 
-<!-- PASAJEROS -->
+<!-- ================= PASAJEROS ================= -->
 <section>
   <div class="container">
     <h2>Viaja fácil con Mi Taxi</h2>
-    <p class="sub">
-      Solicita mototaxi, taxi o motocar desde tu celular.
-      Rápido, seguro y sin complicaciones.
-    </p>
+    <p class="sub">Solicita tu transporte desde el celular. Rápido, seguro y sin complicaciones.</p>
 
     <div class="cards">
-      <div class="card">
-        <h3>📱 Rápido</h3>
-        <p>Pide tu viaje en segundos</p>
-      </div>
-      <div class="card">
-        <h3>📍 Cercano</h3>
-        <p>Conductores disponibles cerca de ti</p>
-      </div>
-      <div class="card">
-        <h3>🔐 Seguro</h3>
-        <p>Conductores registrados y verificados</p>
-      </div>
+      <div class="card"><h3>📱 Rápido</h3><p>Pide tu viaje en segundos</p></div>
+      <div class="card"><h3>📍 Cercano</h3><p>Conductores disponibles cerca</p></div>
+      <div class="card"><h3>🔐 Seguro</h3><p>Conductores verificados</p></div>
     </div>
   </div>
 </section>
 
-<!-- CONDUCTORES -->
+<!-- ================= CONDUCTORES ================= -->
 <section class="conductor">
   <div class="container">
     <h2>¿Tienes moto, taxi o motocar?</h2>
-    <p class="sub">
-      Genera ingresos diarios usando tu propio vehículo.
-      Tú eliges cuándo trabajar.
-    </p>
+    <p class="sub">Genera ingresos diarios usando tu propio vehículo.</p>
 
     <div class="cards">
-      <div class="card">
-        <h3>💰 Más ingresos</h3>
-        <p>Recibe viajes todos los días</p>
-      </div>
-      <div class="card">
-        <h3>🕒 Tú decides</h3>
-        <p>Sin horarios ni jefes</p>
-      </div>
-      <div class="card">
-        <h3>📍 Menos gasto</h3>
-        <p>Viajes cerca de tu zona</p>
-      </div>
-    </div>
-
-    <div style="text-align:center;margin-top:40px">
-      <a class="btn btn-yellow"
-         href="https://play.google.com/store/apps/details?id=com.blueapp.conductor"
-         target="_blank">
-         Registrarme como Conductor
-      </a>
+      <div class="card"><h3>💰 Más ingresos</h3><p>Viajes todos los días</p></div>
+      <div class="card"><h3>🕒 Sin horarios</h3><p>Tú decides cuándo trabajar</p></div>
+      <div class="card"><h3>📍 Menos gasto</h3><p>Viajes cerca de tu zona</p></div>
     </div>
   </div>
 </section>
@@ -284,6 +252,7 @@ footer{
   © 2026 Mi Taxi Bolivia · JEDIS Web Solutions
 </footer>
 
+<!-- ================= CONTADOR JS ================= -->
 <script>
 const lanzamiento = new Date("February 2, 2026 19:00:00").getTime();
 setInterval(()=>{
@@ -299,6 +268,8 @@ setInterval(()=>{
 
 </body>
 </html>
+
+
 
 
 
