--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content="Descarga Mi Taxi y solicita tu viaje en segundos. Seguro, rápido y con conductores cerca de ti.">
 
   <meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/preview-wa.jpg">
-  <meta property="og:image:secure_url" content="https://jwilsoncruz.github.io/MiTaxi/preview-wa.jpg">
+  <meta property="og:image:secure_url" content="https://jwilsoncruz.github.io/MiTaxi/Preview.jpg">
   <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -268,6 +268,7 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
 
