--- a/index.html
+++ b/index.html
@@ -1,4 +1,196 @@
-#promo-semanal{
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <!-- ================= META BÁSICO ================= -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Mi Taxi App | Pide tu taxi rápido y seguro</title>
+  <meta name="description" content="Solicita taxis, mototaxis o motocar con la app Mi Taxi. Rápido, seguro y con conductores verificados.">
+
+  <!-- ================= OPEN GRAPH (FB + WHATSAPP) ================= -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://jwilsoncruz.github.io/MiTaxi/">
+  <meta property="og:title" content="Mi Taxi App | Pide tu taxi rápido y seguro">
+  <meta property="og:description" content="Descarga Mi Taxi y solicita tu viaje en segundos. Seguro, rápido y con conductores cerca de ti.">
+
+  <meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/preview-wa.jpg">
+  <meta property="og:image:secure_url" content="https://jwilsoncruz.github.io/MiTaxi/preview-wa.jpg">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- ================= FAVICON ================= -->
+  <link rel="icon" href="img/icono.png" type="image/png">
+
+  <!-- ================= FUENTES ================= -->
+  <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- ================= ESTILOS ================= -->
+  <style>
+    :root{
+      --azul:#0B4DB8;
+      --amarillo:#F5C400;
+      --negro:#0A0A0A;
+      --blanco:#ffffff;
+    }
+
+    *{
+      margin:0;
+      padding:0;
+      box-sizing:border-box;
+      font-family:'Asap', Arial, sans-serif;
+    }
+
+    body{
+      background:var(--negro);
+      color:var(--blanco);
+      line-height:1.6;
+    }
+
+    /* HERO */
+    .hero{
+      background:
+        linear-gradient(rgba(11,77,184,.9),rgba(0,0,0,.9)),
+        url("ClienteConductor.png") center/cover no-repeat;
+      padding:90px 20px;
+      text-align:center;
+    }
+
+    .hero img{
+      width:140px;
+      margin-bottom:20px;
+    }
+
+    .hero h1{
+      font-size:40px;
+      margin-bottom:10px;
+    }
+
+    .hero p{
+      max-width:720px;
+      margin:0 auto 30px;
+      font-size:18px;
+    }
+
+    /* BOTONES */
+    .btn{
+      display:inline-block;
+      padding:15px 32px;
+      border-radius:30px;
+      text-decoration:none;
+      font-weight:700;
+      margin:8px;
+      transition:.3s;
+    }
+
+    .btn-yellow{
+      background:var(--amarillo);
+      color:#000;
+    }
+
+    .btn-blue{
+      border:2px solid var(--amarillo);
+      color:var(--amarillo);
+      background:transparent;
+    }
+
+    .btn:hover{
+      transform:scale(1.05);
+    }
+
+    /* CONTADOR */
+    #contador{
+      display:flex;
+      justify-content:center;
+      gap:14px;
+      margin-bottom:35px;
+      flex-wrap:wrap;
+    }
+
+    .time{
+      background:#0f1f44;
+      border:2px solid var(--amarillo);
+      border-radius:12px;
+      padding:12px 18px;
+      min-width:90px;
+    }
+
+    .time div{
+      font-size:34px;
+      color:var(--amarillo);
+      font-weight:bold;
+    }
+
+    .time span{
+      font-size:12px;
+      text-transform:uppercase;
+    }
+
+    /* SECCIONES */
+    section{
+      padding:80px 20px;
+    }
+
+    .container{
+      max-width:1100px;
+      margin:auto;
+    }
+
+    h2{
+      text-align:center;
+      font-size:34px;
+      margin-bottom:15px;
+    }
+
+    .sub{
+      text-align:center;
+      max-width:750px;
+      margin:0 auto 45px;
+      font-size:17px;
+    }
+
+    /* CARDS */
+    .cards{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+      gap:25px;
+    }
+
+    .card{
+      background:#111;
+      border-radius:16px;
+      padding:28px;
+      text-align:center;
+      border:1px solid #222;
+    }
+
+    .card h3{
+      color:var(--amarillo);
+      margin-bottom:10px;
+    }
+
+    /* CONDUCTOR */
+    .conductor{
+      background:
+        linear-gradient(rgba(11,77,184,.95),rgba(11,77,184,.95)),
+        url("ClienteConductor.png") center/cover no-repeat;
+    }
+
+    footer{
+      background:#000;
+      padding:30px;
+      text-align:center;
+      font-size:14px;
+      color:#aaa;
+    }
+
+    @media(max-width:600px){
+      .hero h1{font-size:30px}
+      h2{font-size:26px}
+    }
+    #promo-semanal{
   background: linear-gradient(135deg,#0a1d3a,#003366,#0f3d5c);
   padding:50px 15px;
   color:#fff;
@@ -131,6 +323,129 @@
   from{opacity:0;}
   to{opacity:1;}
 }
+
+  </style>
+</head>
+
+<body>
+
+<!-- ================= HERO ================= -->
+<div class="hero">
+  <img src="logo.jpg" alt="Mi Taxi Logo">
+
+  <h1>Mototaxi · Taxi · Motocar</h1>
+  <p>La nueva App de transporte en Trinidad.  
+     Pide tu viaje o gana dinero con tu vehículo.</p>
+
+  <div id="contador">
+    <div class="time"><div id="d">00</div><span>Días</span></div>
+    <div class="time"><div id="h">00</div><span>Horas</span></div>
+    <div class="time"><div id="m">00</div><span>Min</span></div>
+    <div class="time"><div id="s">00</div><span>Seg</span></div>
+  </div>
+
+<!-- SECCIÓN PROMOCIÓN DE LA SEMANA -->
+<section id="promo-semanal">
+  <div class="promo-container">
+    <div class="promo-text">
+      <h2>🔥 Promoción de la Semana</h2>
+      <p class="fecha">Válido del <b>10 al 17 de Enero</b></p>
+      <p class="desc">
+        Gana más con Mi Taxi esta semana. Cumple tus carreras y recibe bonos adicionales.
+      </p>
+
+      <div class="promo-buttons">
+        <a href="https://wa.me/59168972863?text=Hola%2C%20quiero%20pedir%20un%20taxi%20con%20la%20app%20Mi%20Taxi%20🚖"
+           class="btn pasajero" target="_blank">
+           Soy Pasajero
+        </a>
+
+        <a href="https://wa.me/59168972863?text=Hola%2C%20quiero%20trabajar%20como%20conductor%20en%20Mi%20Taxi%20🛵🚕"
+           class="btn conductor" target="_blank">
+           Soy Conductor
+        </a>
+      </div>
+
+      <div class="qr-mini">
+        <img src="qr.png" alt="QR descarga Mi Taxi">
+        <small>Descarga rápida</small>
+      </div>
+    </div>
+
+    <div class="promo-img">
+      <img src="promosemanal.jpeg" alt="Promoción Mi Taxi">
+    </div>
+  </div>
+</section>
+
+<!-- BOTÓN WHATSAPP FLOTANTE -->
+<a href="https://wa.me/59168972863"
+   class="wa-float" target="_blank">
+  💬
+</a>
+
+  
+  <a class="btn btn-yellow" target="_blank"
+     href="https://play.google.com/store/apps/details?id=com.blueapp.usuario">
+     Soy Pasajero – Descargar App
+  </a>
+
+  <a class="btn btn-blue" target="_blank"
+     href="https://play.google.com/store/apps/details?id=com.blueapp.conductor">
+     Soy Conductor – Ganar Dinero
+  </a>
+</div>
+
+<!-- ================= PASAJEROS ================= -->
+<section>
+  <div class="container">
+    <h2>Viaja fácil con Mi Taxi</h2>
+    <p class="sub">Solicita tu transporte desde el celular. Rápido, seguro y sin complicaciones.</p>
+
+    <div class="cards">
+      <div class="card"><h3>📱 Rápido</h3><p>Pide tu viaje en segundos</p></div>
+      <div class="card"><h3>📍 Cercano</h3><p>Conductores disponibles cerca</p></div>
+      <div class="card"><h3>🔐 Seguro</h3><p>Conductores verificados</p></div>
+    </div>
+  </div>
+</section>
+
+<!-- ================= CONDUCTORES ================= -->
+<section class="conductor">
+  <div class="container">
+    <h2>¿Tienes moto, taxi o motocar?</h2>
+    <p class="sub">Genera ingresos diarios usando tu propio vehículo.</p>
+
+    <div class="cards">
+      <div class="card"><h3>💰 Más ingresos</h3><p>Viajes todos los días</p></div>
+      <div class="card"><h3>🕒 Sin horarios</h3><p>Tú decides cuándo trabajar</p></div>
+      <div class="card"><h3>📍 Menos gasto</h3><p>Viajes cerca de tu zona</p></div>
+    </div>
+  </div>
+</section>
+
+<footer>
+  © 2026 Mi Taxi Bolivia · JEDIS Web Solutions
+</footer>
+
+<!-- ================= CONTADOR JS ================= -->
+<script>
+const lanzamiento = new Date("February 2, 2026 19:00:00").getTime();
+setInterval(()=>{
+  const now = new Date().getTime();
+  const t = lanzamiento - now;
+  if(t <= 0) return;
+  d.innerHTML=Math.floor(t/(1000*60*60*24));
+  h.innerHTML=Math.floor((t%(1000*60*60*24))/(1000*60*60));
+  m.innerHTML=Math.floor((t%(1000*60*60))/(1000*60));
+  s.innerHTML=Math.floor((t%(1000*60))/1000);
+},1000);
+</script>
+
+</body>
+</html>
+
+
 
 
 
