--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <meta property="og:title" content="Mi Taxi App | Pide tu taxi rápido y seguro">
   <meta property="og:description" content="Descarga Mi Taxi y solicita tu viaje en segundos. Seguro, rápido y con conductores cerca de ti.">
 
-  <meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/preview-wa.jpg">
-  <meta property="og:image:secure_url" content="https://jwilsoncruz.github.io/MiTaxi/preview-wa.jpg">
+  <meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/Preview.jpg">
+  <meta property="og:image:secure_url" content="https://jwilsoncruz.github.io/MiTaxi/Preview.jpg">
   <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -373,7 +373,7 @@
     </div>
 
     <div class="promo-img">
-      <img src="promosemanal.jpeg" alt="Promoción Mi Taxi">
+      <img src="promosemanal.jpg" alt="Promoción Mi Taxi">
     </div>
   </div>
 </section>
@@ -444,6 +444,7 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
 
