--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         Gana más con Mi Taxi esta semana. Cumple tus carreras y recibe bonos adicionales.
       </p>
 
-      <div class="promo-buttons">
+     <!-- <div class="promo-buttons">
         <a href="https://wa.me/59168972863?text=Hola%2C%20quiero%20pedir%20un%20taxi%20con%20la%20app%20Mi%20Taxi%20🚖"
            class="btn pasajero" target="_blank">
            Soy Pasajero
@@ -364,7 +364,7 @@
            class="btn conductor" target="_blank">
            Soy Conductor
         </a>
-      </div>
+      </div> --->
 
       <div class="qr-mini">
         <img src="qr.png" alt="QR descarga Mi Taxi">
@@ -444,6 +444,7 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
 
