--- a/index.html
+++ b/index.html
@@ -367,13 +367,13 @@
       </div> --->
 
       <div class="qr-mini">
-        <img src="qr.png" alt="QR descarga Mi Taxi">
+        <img src="qr.jpeg" alt="QR descarga Mi Taxi">
         <small>Descarga rápida</small>
       </div>
     </div>
 
     <div class="promo-img">
-      <img src="promosemanal.jpg" alt="Promoción Mi Taxi">
+      <img src="promosemanal.jpeg" alt="Promoción Mi Taxi">
     </div>
   </div>
 </section>
@@ -444,6 +444,7 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
 
