--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://jwilsoncruz.github.io/MiTaxi/">
 <meta property="og:title" content="Mi Taxi App | Transporte rápido y seguro">
 <meta property="og:description" content="Descarga Mi Taxi y viaja seguro en Trinidad, Beni.">
-<meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/img/Preview.jpg">
+<meta property="og:image" content="https://jwilsoncruz.github.io/MiTaxi/Preview.jpg">
 <meta property="og:image:type" content="image/jpeg">
 
 <!-- Favicon -->
@@ -225,6 +225,7 @@ footer{
 
 </body>
 </html>
+
 
 
 
